--- a/submit.html
+++ b/submit.html
@@ -42,7 +42,7 @@
     <div>
         <h2>Form Submission Confirmation</h2>
         <p>Thank you for contacting us! Your message has been successfully submitted.</p>
-        <button onclick="window.location.href='contact.html';">Return to Home</button>
+        <button onclick="window.location.href='index.html';">Return to Home</button>
     </div>
 </body>
 </html>
